<resources>
    <string name="app_name">WB</string>
    <string name="title_home">Tienda</string>
    <string name="title_reservation">Reservación</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_diplomados">Diplomados</string>

    <string name="login_txt">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="login_email_hint">Correo</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="not_empty">Este campo no puede ir vacío</string>
    <string name="not_connected">Sin conexión a internet</string>
    <string name="mail_pass_incorrect">Correo o contraseña incorrectos</string>
    <string name="google_problem">Ocurrio un problema, favor intentarlo mas tarde</string>
    <string name="login_successful">Se ha iniciado sesión correctamente</string>
    <string name="login_signup_hint">¿No tiene una cuenta? Registrese</string>
    <string name="register_name_hint">Nombre</string>
    <string name="register_lastname_hint">Apellido</string>
    <string name="register_birthday">Fecha de nacimiento</string>
    <string name="register_txt">Registrarte</string>

    <string name="log_out">Cerrar sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_services">Elige los servicios.</string>
    <string name="total_time">El tiempo total es de:</string>
    <string name="reservar_action">Reservar</string>
    <string name="min">min</string>
    <string name="dash_text">-</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="login_with_google">O inicie sesión con Google</string>
    <string name="select_services">Debe seleccionar al menos un servicio</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>

    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>

    <string name="my_web_client_id">1054757233267-8u65ke5domjoej4d8maufp4otndtf15a.apps.googleusercontent.com</string>
    <string name="stylist">Estilista:</string>
    <string name="select_services_text">Seleccione los servicios que sean de su preferencia</string>
    <string name="estimated_time">Tiempo estimado:</string>
    <string name="total_text">Total:</string>
    <string name="pay_now_text">Pagar ahora</string>
    <string name="title_activity_cash">CashActivity</string>
    <string name="added_product">El producto fue agregado al carrito de compras</string>
    <string name="reserved_products">Se ha reservado su pedido, revise su correo electrónico</string>
    <string name="payment_product">El pago fue realizado con exito</string>
    <string name="enter_data">Ingrese sus datos por favor</string>
</resources>