<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_reservation">

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.proceedto15.wb.ui.fragments.ProductsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.proceedto15.wb.ui.fragments.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.proceedto15.wb.ui.fragments.DiplomadosFragment"
        android:label="@string/title_diplomados"
        tools:layout="@layout/fragment_diplomados" />
</navigation>