<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_child_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
  <LinearLayout
      style="@style/linearParent"
      android:layout_gravity="center"
      android:padding="@dimen/loginViewsMargin">
    <TextView
        style="@style/headerTextPrimary"
        android:text="@string/login_txt"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">
      <EditText
          android:id="@+id/editTextEmail"
          style="@style/modifiedEditText"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          android:hint="@string/login_email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">
      <EditText
          android:id="@+id/editTextPassword"
          style="@style/modifiedEditText"
          android:hint="@string/login_password_hint"
          android:maxLines="1"
          android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/registerAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/login_signup_hint"
        android:textAlignment="center"
        android:textColor="@color/golden"/>
    <TextView
        android:id="@+id/googleAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_small_margin"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textColor="@color/golden"/>
    <Button
        android:id="@+id/cirLoginButton"
        style="@style/loginButton"
        android:text="@string/login_txt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/loginViewsMargin"/>
  </LinearLayout>
</ScrollView>