<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ReservationFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/select_services_text"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginHorizontal="@dimen/big_padding"
                android:layout_marginTop="@dimen/normal_padding" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_padding"/>
            <RelativeLayout
                android:id="@+id/total_time_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/click_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_access_time_24"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/estimated_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_time"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_marginLeft="@dimen/normal_padding"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/click_image" />
                <TextView
                    android:id="@+id/total_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_marginHorizontal="@dimen/normal_padding"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/estimated_time_text" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/total_time_text" />
            </RelativeLayout>
            <Button
                android:id="@+id/to_reservation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/big_padding"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_marginBottom="@dimen/normal_padding"
                android:text="@string/reservar_action" />
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/selected_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>